--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -34,5 +34,6 @@ jobs:
         with:
           python-version: "3.11"
       - run: python -m pip install isort
-      - name: Run isort
+      - name: Run isort api
+        working-directory: ${{ github.workspace }}/api/
         run: isort --check --diff .
